[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/Menu.gd" type="Script" id=1]
[ext_resource path="res://texture/titre.png" type="Texture" id=2]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sound/click.wav" type="AudioStream" id=4]
[ext_resource path="res://texture/img_menu.png" type="Texture" id=5]
[ext_resource path="res://anim/fade_in.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_conteneur" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 40.0
margin_right = -59.9999
margin_bottom = -40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titre" type="TextureRect" parent="menu_conteneur"]
margin_right = 1160.0
margin_bottom = 120.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="centre" type="HBoxContainer" parent="menu_conteneur"]
margin_top = 130.0
margin_right = 1160.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="boutons" type="VBoxContainer" parent="menu_conteneur/centre"]
margin_right = 578.0
margin_bottom = 510.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Jouer" type="Button" parent="menu_conteneur/centre/boutons"]
margin_top = 89.0
margin_right = 578.0
margin_bottom = 157.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
flat = true

[node name="Label" type="Label" parent="menu_conteneur/centre/boutons/Jouer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="AudioStreamPlayer" parent="menu_conteneur/centre/boutons/Jouer"]
stream = ExtResource( 4 )

[node name="Options" type="Button" parent="menu_conteneur/centre/boutons"]
margin_top = 177.0
margin_right = 578.0
margin_bottom = 245.0
rect_min_size = Vector2( 0, 68 )
size_flags_horizontal = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="menu_conteneur/centre/boutons/Options"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="AudioStreamPlayer" parent="menu_conteneur/centre/boutons/Options"]
stream = ExtResource( 4 )

[node name="Crédits" type="Button" parent="menu_conteneur/centre/boutons"]
margin_top = 265.0
margin_right = 578.0
margin_bottom = 333.0
rect_min_size = Vector2( 0, 68 )
flat = true

[node name="Label" type="Label" parent="menu_conteneur/centre/boutons/Crédits"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Crédits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="AudioStreamPlayer" parent="menu_conteneur/centre/boutons/Crédits"]
stream = ExtResource( 4 )

[node name="Quitter" type="Button" parent="menu_conteneur/centre/boutons"]
margin_top = 353.0
margin_right = 578.0
margin_bottom = 421.0
rect_min_size = Vector2( 0, 68 )
flat = true

[node name="Label" type="Label" parent="menu_conteneur/centre/boutons/Quitter"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="AudioStreamPlayer" parent="menu_conteneur/centre/boutons/Quitter"]
stream = ExtResource( 4 )

[node name="image_menu_container" type="CenterContainer" parent="menu_conteneur/centre"]
margin_left = 582.0
margin_right = 1160.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="image_menu" type="TextureRect" parent="menu_conteneur/centre/image_menu_container"]
margin_left = 129.0
margin_top = 96.0
margin_right = 449.0
margin_bottom = 414.0
texture = ExtResource( 5 )

[node name="fadeIn" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="menu_conteneur/centre/boutons/Jouer" to="." method="_on_Jouer_pressed"]
[connection signal="pressed" from="menu_conteneur/centre/boutons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="menu_conteneur/centre/boutons/Crédits" to="." method="_on_Crdits_pressed"]
[connection signal="pressed" from="menu_conteneur/centre/boutons/Quitter" to="." method="_on_Quitter_pressed"]
[connection signal="fade_finished" from="fadeIn" to="." method="_on_fadeIn_fade_finished"]
